--- a/exercises/sheet01/sheet01.tex
+++ b/exercises/sheet01/sheet01.tex
@@ -75,7 +75,7 @@
     \begin{center}
         For all sets A, B and C: if $A \subseteq (B \cup C)$, then $A \subseteq B$ or $A \subseteq C$.
     \end{center}
-        We choose a set $A = B \cup C$ where $B \neq C$. It follows that $A \not\subseteq B$ and $A \not\subseteq C$ since B and C are now strict subsets of A. Since $A \subseteq (B \cap C)$ holds this contradicts the statement.
+        We choose a set $A = B \cup C$ where $B \neq C$ and $B,C \neq \emptyset$. It follows that $A \not\subseteq B$ and $A \not\subseteq C$ since B and C are now strict subsets of A. Since $A \subseteq (B \cap C)$ holds this contradicts the statement.
 
 
 
