--- a/exercises/sheet02/sheet02.tex
+++ b/exercises/sheet02/sheet02.tex
@@ -45,6 +45,13 @@
 \section*{Exercise \homeworkNumber.2}
 
 \section*{Exercise \homeworkNumber.3}
+\begin{enumerate}[(a)]
+	\item The set builder notation is wrong because it does not specify that x is a natural number and it also does not define n.
+	      The correct notation would be \(\left\{ x \mid x \in \mathbb{N}, x < 20, x \mod 2 = 1 \right\}\).
+	\item The notation is wrong since x is undefined and the 6 alone is not a set.
+	      The correct notation would be \( \left\{ x \mid x \in \mathbb{N}, x \neq 6 \right\} \).
+
+\end{enumerate}
 
 \section*{Exercise \homeworkNumber.4}
 
