--- a/exercises/sheet02/sheet02.tex
+++ b/exercises/sheet02/sheet02.tex
@@ -54,6 +54,20 @@
 \end{enumerate}
 
 \section*{Exercise \homeworkNumber.4}
+\begin{enumerate}[(a)]
+	\item We can first find out what the union of A and B is: \( A \cup B = U \setminus (A \cup B)^{c} = \{1, 3, 5, 6, 8, 9, 10\} \).
+	      With the latter and \( A \cap B = \{1, 3\}  \) it follows that \( \{1, 3\} \subset A \subset A \cup B \)
+	      and \( \{1, 3\} \subset B \subset A \cup B \).
+	      The following sets satisfy the properties: \( A = \{1, 3, 5, 6, 8, 9\}, B = \{1, 3, 10\}\).
+	\item It is not possible to satisfy all conditions at the same time.
+	      If \( A \cap B = \emptyset \), it means that \( A, B \) have no elements in common.
+	      However, if \( A \subset B \), it means that every element of \( A \) is an element of \( B \),
+	      which contradicts the first condition of \( A \) and \( B \) having no common elements.
+	      Therefore, \( A,B \) under the given conditions do not exist.
+	\item The following set \( A, B \) satisfy the required properties:
+	      \( A = B = \{6,7,8\} \).
+
+\end{enumerate}
 
 
 \end{document}
