add newpage for better readablity

--- a/exercises/sheet02/sheet02.tex
+++ b/exercises/sheet02/sheet02.tex
@@ -51,22 +51,23 @@ $\sum\limits_{i=0}^n i = \frac{n*(n+1)}{2} \quad \forall \quad n\in \mathbb N_0$
 \begin{proof}
 	Mathematical induction over n:\\[5pt]
 	\textbf{Basis $n-1=0$ :}\\
-	\begin{flalign*} 
-		0  &=\frac{0*1}{2} &\\
-		0 &= 0 &
+	\begin{flalign*}
+		0 & =\frac{0*1}{2} & \\
+		0 & = 0            &
 	\end{flalign*}
 	\textbf{Induction Hypothesis: } \\[5pt]
 	$\sum\limits_{i=0}^k i = \frac{k*(k+1)}{2} $ for $k = n - 1$ \\[5pt]
 	\textbf{Inductive Step:} $n-1 \rightarrow{} n$ \\[10pt]
 	\begin{align*}
-		&\sum\limits_{i=0}^{n-1} i = \sum\limits_{i=0}^n i - n \myeq \frac{n*(n+1)}{2} - n \\[5pt]
-		&\iff \quad \frac{n*(n+1)}{2} - \frac{2n}{2}  \quad  \\[5pt]
-		&\iff \quad \frac{n*(n+1)-2n}{2} \quad  \\[5pt]
-		&\iff \quad \frac{n*(n+1-2)}{2} \quad  \\[5pt]
-		&\iff \quad \frac{n*(n-1)}{2} \quad  \\[5pt]
-		&\iff \quad \frac{n-1*((n-1)+1)}{2} \quad  \\[5pt]
+		 & \sum\limits_{i=0}^{n-1} i = \sum\limits_{i=0}^n i - n \myeq \frac{n*(n+1)}{2} - n \\[5pt]
+		 & \iff \quad \frac{n*(n+1)}{2} - \frac{2n}{2}  \quad                                \\[5pt]
+		 & \iff \quad \frac{n*(n+1)-2n}{2} \quad                                             \\[5pt]
+		 & \iff \quad \frac{n*(n+1-2)}{2} \quad                                              \\[5pt]
+		 & \iff \quad \frac{n*(n-1)}{2} \quad                                                \\[5pt]
+		 & \iff \quad \frac{n-1*((n-1)+1)}{2} \quad                                          \\[5pt]
 	\end{align*}
 \end{proof}
+\newpage
 
 \section*{Exercise \homeworkNumber.2}
 We will prove the following statement by structural induction:
@@ -93,9 +94,11 @@ We will prove the following statement by structural induction:
 	\end{align*}
 
 \end{proof}
+\newpage
 
 \section*{Exercise \homeworkNumber.3}
 
+\newpage
 
 \section*{Exercise \homeworkNumber.4}
 \begin{enumerate}[(a)]
@@ -104,6 +107,7 @@ We will prove the following statement by structural induction:
 	\item The notation is wrong since x is undefined and the 6 alone is not a set.
 	      The correct notation would be \( \left\{ x \mid x \in \mathbb{N}, x \neq 6 \right\} \).
 \end{enumerate}
+\newpage
 
 \section*{Exercise \homeworkNumber.5}
 \begin{enumerate}[(a)]
