--- a/exercises/sheet03/sheet03.tex
+++ b/exercises/sheet03/sheet03.tex
@@ -29,10 +29,10 @@
 %% Page style that uses the header
 \pagestyle{fancy}
 
-\newcommand{\authorname}{Alex Lutsch\\Kemal Yönet\\Ephraim Siegfried }
+\newcommand{\authorname}{Alex Lutsch\\Ephraim Siegfried }
 \newcommand{\semester}{Fall Semester 2023}
 \newcommand{\course}{Discrete Mathematics in Computer Science}
-\newcommand{\homeworkNumber}{1}
+\newcommand{\homeworkNumber}{3}
 
 
 \begin{document}
