change template header

--- a/template.tex
+++ b/template.tex
@@ -29,7 +29,7 @@
 %% Page style that uses the header
 \pagestyle{fancy}
 
-\newcommand{\authorname}{Alex Lutsch\\Kemal Yönet\\Ephraim Siegfried }
+\newcommand{\authorname}{Alex Lutsch\\Ephraim Siegfried }
 \newcommand{\semester}{Fall Semester 2023}
 \newcommand{\course}{Discrete Mathematics in Computer Science}
 \newcommand{\homeworkNumber}{1}
