--- a/exercises/sheet03/sheet03.tex
+++ b/exercises/sheet03/sheet03.tex
@@ -58,11 +58,7 @@
 
 
 \section*{Exercise \homeworkNumber.3}
-
-\begin{enumerate}[(a)]
-	\item
-	\item
-\end{enumerate}
+We will refute the statement for all sets \( A,B \) it holds that \( |A| < |A \cup B| \). Let \( A = B \), then we have \( A = A \cup B \). In this case it holds that \( |A| = |A \cup B| \), which contradicts the statement.
 
 
 
