--- a/exercises/sheet03/sheet03.tex
+++ b/exercises/sheet03/sheet03.tex
@@ -80,4 +80,14 @@ The union of two bijective functions is bijective, therefore
 	\quad \text{for } n \in \mathbb{N},
 \end{equation*}
 is a bijective function from \( \mathbb{N} \) to \( \mathbb{Z} \) and thus \( \mathbb{Z} \) is countable.
+
+
+\section*{Exercise \homeworkNumber.5}
+
+
+\section*{Exercise \homeworkNumber.6}
+
+
+
+
 \end{document}
