--- a/exercises/sheet03/sheet03.tex
+++ b/exercises/sheet03/sheet03.tex
@@ -14,7 +14,7 @@
 
 \usepackage{amssymb} %% Definitions for math symbols.
 \usepackage{amsmath} %% Definitions for math symbols.
-
+\usepackage{pifont}
 \usepackage{tikz}  %% Pagacke to create graphics (graphs, automata, etc.)
 \usetikzlibrary{automata} %% Tikz library to draw automata
 \usetikzlibrary{arrows}   %% Tikz library for nicer arrow heads
@@ -33,7 +33,9 @@
 \newcommand{\semester}{Fall Semester 2023}
 \newcommand{\course}{Discrete Mathematics in Computer Science}
 \newcommand{\homeworkNumber}{3}
-
+\newcommand{\plane}{\text{\ding{40}}}
+\newcommand{\heart}{\text{\ding{95}}}
+\newcommand{\flower}{\text{\ding{170}}}
 
 \begin{document}
 
@@ -86,7 +88,14 @@ is a bijective function from \( \mathbb{N} \) to \( \mathbb{Z} \) and thus \( \m
 
 
 \section*{Exercise \homeworkNumber.6}
-
+I will first proof that the set \( S \) containing all finite strings that consist
+only of symbols from the set \(  \Sigma = \left\{ \plane, \heart, \flower \right\}  \) is countable. \\
+For each \( n \in \mathbb{N} \), there are \( 3^n \) strings of length \( n \), which is finite.
+We can then enumerate all strings by length, starting with strings of length 0, then length 1, and so on.
+Within each length \( n \), we enumerate the \( 3^n \) strings in some specific order.
+By mapping each string to a unique natural number based on its position in the complete enumeration, starting from 0, we establish a one-to-one correspondence between \( S \) and \( \mathbb{N} \).
+Thus, the set \( S \) is countable. \\
+Since all strings in the set of the tarradiddles \( T \) consist of symbols from \( \Sigma \) we have that \( T \subseteq S \). Because the subset of a countable set is countable, \( T \) is countable.
 
 
 
