--- a/exercises/sheet04/sheet04.tex
+++ b/exercises/sheet04/sheet04.tex
@@ -56,7 +56,7 @@ We examine the following binary Relation: $R = \{ \langle i,j*i \rangle \lvert i
 Since $ i,j \in \mathbb N_0 , i = (j*i)$ because every number of $i$ can be formed with setting $j$ one or zero and the multiplication of two natural numbers is a natural number which is $i$.\\
 It is reflexive since $i = (j*i)$. \\
 It's not irreflexive since its reflexive. \\
-It's symetric since any natural number appears on both sides. \\
+It's symetric since any natural number appears on both sides of the tuple. \\
 It's not asymmetric or antisymmetric since its symetric. \\
 Since both elements of the tuple represent all possible natural numbers we can guarantee transitivity. \\
 \end{document}
