--- a/exercises/sheet04/sheet04.tex
+++ b/exercises/sheet04/sheet04.tex
@@ -40,14 +40,36 @@
 
 
 \section*{Exercise \homeworkNumber.1}
+\begin{enumerate}[(a)]
+	\item We have that \( \left\{ 2,3 \right\} \times \emptyset
+	      = \left\{ \left< a,b \right> \mid a \in \left< 2, 3\right>
+	      \text{ and } b \in \emptyset \right\}\). But there exists no
+	      \( b \) for which \( b \in \emptyset \) is true.
+	      Therefore the statement is wrong and the correct statement would be
+	      \( \left\{ 2,3 \right\} \times \emptyset = \emptyset \).
+	\item With the definition of the cartesian product we have that
+	      \( \left\{ \left< 1,0 \right> \right\} \times \left\{ 0 \right\}
+	      = \left\{ \left< \left< 1,0 \right>, 0 \right>\right\}  \) = S.
+	      Neither of the elements in the right-hand side of the statement are elements of \( S \),
+	      therefore the statement is wrong.
+	\item The order matters in tuples, therefore \( \left< 1,2 \right> \neq \left< 2,1 \right> \).
+	      Thus the set on the left-hand side is not a subset of the set in the right-hand side and vice versa,
+	      which means the two sets are not equal. Therefore the statement is wrong.
+	\item The cartesian product of the two sets
+	      \( C = \left\{ 0, 1, 2 \right\} \times \left\{ 3,4,5 \right\}  \) results in a set of tuples.
+	      The set \( \left\{ 2,4 \right\}  \)  is not a tuple.
+	      Therefore it cannot be element of \( C \), which
+	      means that the statement is wrong.
+
+\end{enumerate}
 
 \section*{Exercise \homeworkNumber.2}
 \begin{enumerate}[(a)]
-    \item $A = \{2,3,5\} = B$
-    \item $\lvert A \cup B\lvert = 4$  so $A \cup B = \{1,6,4,x\}$ \\
-        $\lvert A \times B \lvert = 6$ so $\lvert A\lvert  * \lvert B\lvert  = 6$ \\
-        $\langle\langle 1,6 \rangle,4\rangle \in (A \times A) \times B$ so $ \{1,6\} \in A$ and $ \{4\} \in B$ \\
-        $ A = \{1,6,3\}$ $B = \{3,4\}$
+	\item $A = \{2,3,5\} = B$
+	\item $\lvert A \cup B\lvert = 4$  so $A \cup B = \{1,6,4,x\}$ \\
+	      $\lvert A \times B \lvert = 6$ so $\lvert A\lvert  * \lvert B\lvert  = 6$ \\
+	      $\langle\langle 1,6 \rangle,4\rangle \in (A \times A) \times B$ so $ \{1,6\} \in A$ and $ \{4\} \in B$ \\
+	      $ A = \{1,6,3\}$ $B = \{3,4\}$
 \end{enumerate}
 \section*{Exercise \homeworkNumber.3}
 
