--- a/exercises/sheet04/sheet04.tex
+++ b/exercises/sheet04/sheet04.tex
@@ -72,6 +72,18 @@
 	      $ A = \{1,6,3\}$ $B = \{3,4\}$
 \end{enumerate}
 \section*{Exercise \homeworkNumber.3}
+\begin{enumerate}[(a)]
+	\item \( R_{1} = \left\{ \left< a,a \right>, \left< c,b \right>,\left< b,c \right> \right\}  \)
+	\item This is not possible, which I will show by contradiction.
+	      Suppose it was possible, then per definition \( \left< a,b \right> \in  R_{2}\).
+	      Because the relation should also be symmetric, we know that \( \left< b,a \right> \in R_{2}\).
+	      With the transitivity property, it must be the case that if \( \left< a,b \right> \in R_{2} \)
+	      and \( \left< b,a \right> \in R_{2}\), then \( \left< a,a \right> \in R_{2} \).
+	      But if \( \left< a,a \right> \in R_{2} \) then the relation is not irreflexive.
+	      This is a contradiction and therefore this relation cannot exist.
+
+	      % \item \( R_{2} = \left\{ \left< a,b \right>, \left< b,a \right>,  \right\}  \)
+\end{enumerate}
 
 \section*{Exercise \homeworkNumber.4}
 We examine the following binary Relation: $R = \{ \langle i,j*i \rangle \lvert i,j \in \mathbb N_0\}$ \\
