--- a/exercises/sheet05/sheet05.tex
+++ b/exercises/sheet05/sheet05.tex
@@ -43,7 +43,19 @@
 
 \begin{enumerate}[(a)]
 	\item
+	From the slides we have the hint that equivalence relations induce partitions.\\
+	We look for the amount of relations over the equivalence set of M: $\lvert R \lvert \subseteq (\sim M), M =\{1,2,3\}$.
+	Since $(\sim M) = M_1 \times M_2$, where $M_1 \times M_2$ has to be reflexive, symetric and transitive, every possible subset of $(\sim M)$ has to fulfill $M_1 = M_2$. \\
+	This is equivalent to the different ways you can partition the set M into disjoint subsets. \\
+	$R_1 = \{\{1,2\},3\}, R_2 = \{1,\{2,3\}\}$ etc.., $\lvert R \lvert = 5$.
 	\item
+	$[a]_\sim = \{a\}$,
+	$[b]_\sim = \{b,d\}$,
+	$[c]_\sim = \{c,e\}$,
+	$[d]_\sim = \{d,b\}$,
+	$[e]_\sim = \{e,c\}$
+
+
 \end{enumerate}
 
 
