--- a/exercises/sheet05/sheet05.tex
+++ b/exercises/sheet05/sheet05.tex
@@ -78,7 +78,9 @@
 
 
 \section*{Exercise \homeworkNumber.3}
-
+$S = \{(c,c),(d,d),(a,b)\}$ \\
+It is a partial order since not every element is related to another and its reflexive, antisymetric and transitive. \\
+c and d are the minmial elements as there is no $y$ with $ y \preceq c,d  $.
 
 
 \section*{Exercise \homeworkNumber.4}
@@ -104,11 +106,18 @@
 
 \begin{enumerate}[(a)]
 	\item
+	$ A^{-1} = \{\langle 2x,x \rangle \lvert x \in \mathbb N_o \}$
 	\item
+	$ B \setminus A^{-1} = \{\langle i*x,x \rangle \lvert i,x \in \mathbb N_0, i \neq 2\}$
 	\item
+	$C \circ A = \{\langle 4,4 \rangle,\langle 5,16 \rangle, \langle 4,14\rangle, \langle 8,4 \rangle,\langle 6,8\rangle\}$
 	\item
-	\item
-	\item
+	$A \circ (A \circ A) = \{ \langle x,8*x\rangle\lvert x\in \mathbb N_0\}$
+ 	\item
+	 $A^{*} = \{\langle x ,2*y*x\rangle\lvert x,y \in \mathbb N_0\}$
+	 \item 
+	 $A \circ B = \{\langle x,x\rangle \lvert (2*x = i*x : i,x) \in \mathbb N_0\}$
+
 \end{enumerate}
 
 \end{document}
