--- a/exercises/sheet05/sheet05.tex
+++ b/exercises/sheet05/sheet05.tex
@@ -116,7 +116,7 @@ c and d are the minmial elements as there is no $y$ with $ y \preceq c,d  $.
  	\item
 	 $A^{*} = \{\langle x ,2^y*x\rangle\lvert x,y \in \mathbb N_0\}$
 	 \item 
-	 $A \circ B = \{\langle x,x\rangle \lvert (2*x = i*x : i,x) \in \mathbb N_0\}$
+	 $A \circ B = \{\langle x,x\rangle \lvert (2*x = i*x) : i,x \in \mathbb N_0\}$
 
 \end{enumerate}
 
