--- a/exercises/sheet06/sheet06.tex
+++ b/exercises/sheet06/sheet06.tex
@@ -56,6 +56,11 @@
 
 
 \section*{Exercise \homeworkNumber.3}
+Let \( f \colon \mathbb{R}_{\geq 0} \to \mathbb{R}_{\geq 0} \colon f(x) = \sqrt{x}  \)
+and \( g \colon \mathbb{R} \to \mathbb{R} \colon g(x) = x^2  \).
+We have that g(x) is not injective as it was shown in the lecture.
+The composition \( g \circ f = g(f(x)) = (\sqrt{x})^2 = x \) is injective,
+since we have that for all \( x,y \in  \mathbb{R}_{\geq 0} \) with \( x \neq y \) that \( f(x) = x \neq y = f(y) \).
 
 
 
