--- a/exercises/sheet06/sheet06.tex
+++ b/exercises/sheet06/sheet06.tex
@@ -69,10 +69,11 @@ since we have that for all \( x,y \in  \mathbb{R}_{\geq 0} \) with \( x \neq y \
 
 
 \section*{Exercise \homeworkNumber.5}
+I solved (b) and (c) with a python script which is in the appendix.
 \begin{enumerate}[(a)]
-	\item
-	\item
-	\item
+	\item Since A and D, B and C are switched, we have that \( C = \left\{ A \to D, B \to C, C \to B, D \to A, E \to E \right\}  \). Therefore \( P \circ C = \left\{ A \to 4, B \to 3, C \to 2, D \to 1, E \to 5 \right\} \).
+	\item \( R_{1} = \left\{ 1 \to 1, 2 \to 3, 3 \to 4, 4 \to 5, 5 \to 2 \right\}  \)
+	\item The encoding of ED is EC.
 \end{enumerate}
 
 \end{document}
