--- a/exercises/sheet06/sheet06.tex
+++ b/exercises/sheet06/sheet06.tex
@@ -40,18 +40,15 @@
 
 
 \section*{Exercise \homeworkNumber.1}
-
+dom(f) $= \mathbb N_1$ \\
+img(f) $= \{3x \lvert x \in \mathbb N_0\} $
 
 
 
 \section*{Exercise \homeworkNumber.2}
+$ f(0) = v, f(1) = x, f(2) = u, f(4) = z, f(5) = z $ \\
+The lenght of the image is 4, 3 isnt in the domain, the inverse function has preimage of 3 and image of 4 so we have a double mapping, this double mapping doesnt appear in $f\lvert\{0,1,2\}$ as it has to be a total function.
 
-\begin{enumerate}[(a)]
-	\item
-	\item
-	\item
-	\item
-\end{enumerate}
 
 
 
@@ -65,7 +62,9 @@ since we have that for all \( x,y \in  \mathbb{R}_{\geq 0} \) with \( x \neq y \
 
 
 \section*{Exercise \homeworkNumber.4}
-
+We have a function g which maps every f(x) to x, for all x which are in the domain of f. This means every x has to be assigned to at most one f(x), otherwise we would have ambiguity. Hence the function f has to be injective.\\
+We also have a function h with which we can map every value $y$ in the codomain of f to itself ($y$) by inserting h into f: $f(h(y)) = y$. This means for every $y \in$ "codomain of f" there is an $f(h(y)) = y$, which implies that every possible value in the codomain of f must have a mapping. We conclude that the function f is also surjective. \\
+As the function f is injective and surjective, it is bijective.
 
 
 \section*{Exercise \homeworkNumber.5}
