--- a/exercises/sheet07/sheet07.tex
+++ b/exercises/sheet07/sheet07.tex
@@ -34,7 +34,7 @@
 \newcommand{\authorname}{Alex Lutsch\\Ephraim Siegfried }
 \newcommand{\semester}{Fall Semester 2023}
 \newcommand{\course}{Discrete Mathematics in Computer Science}
-\newcommand{\homeworkNumber}{1}
+\newcommand{\homeworkNumber}{7}
 
 
 \begin{document}
@@ -80,6 +80,10 @@
 
 
 \section*{Exercise \homeworkNumber.4}
+The graph \( G = (V,E) \) with \\
+\( V = \left\{ H, I, J, K, L, M, N  \right\}  \) and \\
+\( \allowbreak E = \left\{ \left\{ K, J \right\}, \left\{ K,M \right\}, \left\{ K,N \right\}, \left\{ K,H \right\}, \left\{ K,L \right\}, \left\{ J,M \right\}, \left\{ M,N \right\}, \left\{ M,L \right\}   \right\} \) \\
+satisfies the properties.
 
 
 
