--- a/exercises/sheet07/sheet07.tex
+++ b/exercises/sheet07/sheet07.tex
@@ -44,8 +44,8 @@
 \section*{Exercise \homeworkNumber.1}
 
 \begin{enumerate}[(a)]
-	\item
-	\item
+	\item I will disprove the statement with a counter example. For \( a = b = c = 2 \) we have that \( a \mid c \) and \( b \mid c \) is true because we have \( ak = bk = 2k = c = 2 \) for \( k = 1 \). But \( ab \mid c \) which is equivalent to \( 4 \mid 2 \) is not true because there exists no \( k \in \mathbb{Z} \) such that \( abk = 4k = 2 = c\). Therefore \( a \mid c \) and \( b \mid c \) does not imply \( ab \mid c \).
+	\item If \( a \mid b \) and \( a \mid b-c \) there exist \( k_{1}, k_{2} \in  \mathbb{Z} \) s.t. \( ak_{1} = b \) and \( ak_{2}=b-c \). By substitution we get \( ak_{2} = ak_{1}-c \leftrightarrow ak_{1} - ak_{2} = c \leftrightarrow a(k_{1}-k_{2}) = c \). We have that \( k_{1}-k_{2} = k_{3} \in \mathbb{Z} \). Therefore \( ak_{3} = c \) which implies \( a \mid c \).
 \end{enumerate}
 
 
@@ -82,7 +82,7 @@
 \section*{Exercise \homeworkNumber.4}
 The graph \( G = (V,E) \) with \\
 \( V = \left\{ H, I, J, K, L, M, N  \right\}  \) and \\
-\( \allowbreak E = \left\{ \left\{ K, J \right\}, \left\{ K,M \right\}, \left\{ K,N \right\}, \left\{ K,H \right\}, \left\{ K,L \right\}, \left\{ J,M \right\}, \left\{ M,N \right\}, \left\{ M,L \right\}   \right\} \) \\
+\( E = \left\{ \left\{ K, J \right\}, \left\{ K,M \right\}, \left\{ K,N \right\}, \left\{ K,H \right\}, \left\{ K,L \right\}, \left\{ J,M \right\}, \left\{ M,N \right\}, \left\{ M,L \right\}   \right\} \) \\
 satisfies the properties.
 
 
