--- a/exercises/sheet07/sheet07.tex
+++ b/exercises/sheet07/sheet07.tex
@@ -90,10 +90,10 @@ satisfies the properties.
 \section*{Exercise \homeworkNumber.5}
 
 \begin{enumerate}[(a)]
-	\item
-	\item
-	\item
-	\item
+	\item The walk \( \pi =  \left< D,B,A,B \right> \) from D to B is not a path.
+	\item The set \( P = \left\{ \left< A, B, C \right>, \left< C, B, A \right>, \left< D,B,A \right>, \left< D,B,C \right> \right\}   \) contains all paths with length 2.
+	\item The tour \( \left< A \right> \) satisfies \( v_{0} = v_{n} = A \) and is not a cycle.
+	\item There are 6 cycles in the graph.
 \end{enumerate}
 
 
